# firejail-agents-microvm-testing

./: .gitignore  README.md  config.example.json  pyproject.toml
baseline-profiles/: firejail-only-code-agent.profile
docs/: crosvm.md  findings.md  firecracker.md  kvmtool.md  publish-plan.md
fixtures/: project-visible.txt
guest-profiles/: aider.profile  amp.profile  claude.profile  code-agent.profile  codex.profile  opencode.profile
host-profiles/: crosvm-host.profile  firecracker-host.profile  kvmtool-host.profile  vmm-base.profile
results/: firecracker-boot-config.json
runners/: crosvm.sh  firecracker.sh  kvmtool.sh
scripts/: build-vm-images.sh  enable-kvm-and-run.sh  enable-kvm.sh
tests/: bench_security.py  check_host.py  guest_probe.py  guest_probe.sh
